Minor style cleanup and jdoc fixes